tests/expectations/compiler/dynamic_dispatch/dynamic_mapping_wrong_default_type_fail.out
Error [ETYC0372117]: Expected type `u64` but type `bool` was found.
    --> compiler-test:13:60
     |
  13 |     let val: u64 = Bank@(target)::balances.get_or_use(key, true);
     |                                                            ^^^^
